cluster/authelia/pvc2.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: authelia
  labels:
    app: authelia
spec:
  selector:
    matchLabels:
      app: authelia
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: authelia
    spec:
      hostNetwork: false
      hostPID: false
      hostIPC: false
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.example.com/location: home
      securityContext:
        runAsUser: 2000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: authelia
          image: authelia/authelia:4.25.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "50Mi"
              cpu: "0.25"
            limits:
              memory: "125Mi"
              cpu: "4"
          ports:
            - name: http
              containerPort: 9091
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
            periodSeconds: 30
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - mountPath: /config
              name: config-volume
            - mountPath: /usr/app/secrets
              name: secrets
              readOnly: true
            - mountPath: /config/certificates
              name: certificates
              readOnly: true
            - mountPath: /data
              name: data
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: authelia
        - name: config-volume
          configMap:
            name: authelia
            items:
              - key: configuration.yml
                path: configuration.yml
        - name: certificates
          secret:
            secretName: authelia-certificates
        - name: secrets
          secret:
            secretName: authelia
            items:
              - key: USER_PASSWORD
                path: user_password
              - key: DUO_API_KEY
                path: duo_api_key
              - key: JWT
                path: jwt
              - key: SESSION
                path: session
